Fix structure, appears to be final fix using css page-break-inside:avoid; to stop wrapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,7 @@ body {
 
 #wrapper {
     columns: 500px;
-    column-gap: 1.25rem;
-    margin: 1.25rem;
-    margin-bottom: 1.25rem;
+    column-gap: 1.25rem;    
 }
 
 #header {
@@ -43,6 +41,9 @@ body {
     text-align: center;
     align-items: center;
     page-break-inside: avoid;
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+    margin-bottom: 1.25rem;
 }
 
 #pass-gen, #notes, #focus, #inbox, #calendar, #social {
